--- a/src/Stelar/HallReg.form
+++ b/src/Stelar/HallReg.form
@@ -55,6 +55,10 @@
             </TitledBorder>
           </Border>
         </Property>
+        <Property name="focusable" type="boolean" value="false"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Viner Hand ITC" size="14" style="0"/>
+        </Property>
       </Properties>
 
       <Layout>
